--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-	"name": "ts-start-cf-demo",
+	"name": "packet-cms",
 	"private": true,
+	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev --port 3000",
 		"build": "vite build",
 		"serve": "vite preview",
 		"test": "vitest run",
-		"deploy": "npm run build && wrangler deploy",
-		"preview": "npm run build && vite preview",
+		"deploy": "bun run build && wrangler deploy",
+		"preview": "bun run build && vite preview",
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
-		"@cloudflare/vite-plugin": "^1.13.8",
-		"@tailwindcss/vite": "^4.0.6",
-		"@tanstack/react-devtools": "^0.7.0",
-		"@tanstack/react-router": "^1.132.0",
-		"@tanstack/react-router-devtools": "^1.132.0",
-		"@tanstack/react-router-ssr-query": "^1.131.7",
-		"@tanstack/react-start": "^1.132.0",
-		"@tanstack/router-plugin": "^1.132.0",
-		"lucide-react": "^0.544.0",
+		"@cloudflare/vite-plugin": "^1.13.17",
+		"@tailwindcss/vite": "^4.1.16",
+		"@tanstack/react-devtools": "^0.7.11",
+		"@tanstack/react-router": "^1.133.36",
+		"@tanstack/react-router-devtools": "^1.133.36",
+		"@tanstack/react-router-ssr-query": "^1.133.36",
+		"@tanstack/react-start": "^1.134.0",
+		"@tanstack/router-plugin": "^1.133.36",
+		"lucide-react": "^0.548.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
-		"tailwindcss": "^4.0.6",
+		"tailwindcss": "^4.1.16",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"devDependencies": {
-		"@testing-library/dom": "^10.4.0",
-		"@testing-library/react": "^16.2.0",
-		"@types/node": "^22.18.12",
-		"@types/react": "^19.2.0",
-		"@types/react-dom": "^19.2.0",
-		"@vitejs/plugin-react": "^5.0.4",
-		"jsdom": "^27.0.0",
-		"typescript": "^5.7.2",
-		"vite": "^7.1.7",
-		"vitest": "^3.0.5",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/react": "^16.3.0",
+		"@types/node": "^24.9.2",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
+		"@vitejs/plugin-react": "^5.1.0",
+		"jsdom": "^27.0.1",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.12",
+		"vitest": "^4.0.5",
 		"web-vitals": "^5.1.0",
-		"wrangler": "^4.45.0"
+		"wrangler": "^4.45.2"
 	}
 }
