--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev --port 3000",
-		"build": "vite build",
+		"dev": "bun run fix && vite dev --port 3000",
+		"build": "bun run fix && vite build",
 		"serve": "vite preview",
 		"test": "vitest run",
+		"typecheck": "bun x tsc --noEmit",
+		"check": "bun x ultracite@latest check",
+		"fix": "bun x ultracite@latest fix",
 		"deploy": "bun run build && wrangler deploy",
 		"preview": "bun run build && vite preview",
 		"cf-typegen": "wrangler types"
@@ -28,17 +31,26 @@
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "2.3.2",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/react": "^16.3.0",
 		"@types/node": "^24.9.2",
 		"@types/react": "^19.2.2",
 		"@types/react-dom": "^19.2.2",
 		"@vitejs/plugin-react": "^5.1.0",
+		"husky": "^9.1.7",
 		"jsdom": "^27.0.1",
+		"lint-staged": "^16.2.6",
 		"typescript": "^5.9.3",
+		"ultracite": "6.0.5",
 		"vite": "^7.1.12",
 		"vitest": "^4.0.5",
 		"web-vitals": "^5.1.0",
 		"wrangler": "^4.45.2"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
+			"bun x ultracite fix"
+		]
 	}
 }
