--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 	},
 	"dependencies": {
 		"@cloudflare/vite-plugin": "^1.13.17",
+		"@hugeicons/core-free-icons": "^1.2.1",
+		"@hugeicons/react": "^1.1.1",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.16",
 		"@tanstack/react-devtools": "^0.7.11",
 		"@tanstack/react-router": "^1.133.36",
@@ -24,9 +27,11 @@
 		"@tanstack/react-router-ssr-query": "^1.133.36",
 		"@tanstack/react-start": "^1.134.0",
 		"@tanstack/router-plugin": "^1.133.36",
-		"lucide-react": "^0.548.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.16",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
@@ -41,8 +46,9 @@
 		"husky": "^9.1.7",
 		"jsdom": "^27.0.1",
 		"lint-staged": "^16.2.6",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
-		"ultracite": "6.0.5",
+		"ultracite": "6.1.0",
 		"vite": "^7.1.12",
 		"vitest": "^4.0.5",
 		"web-vitals": "^5.1.0",
