--- a/package.json
+++ b/package.json
@@ -13,27 +13,44 @@
 		"fix": "bun x ultracite@latest fix",
 		"deploy": "bun run build && wrangler deploy",
 		"preview": "bun run build && vite preview",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"db:setup": "bash scripts/setup-db.sh",
+		"db:push": "bun x drizzle-kit push",
+		"db:generate": "bun x drizzle-kit generate",
+		"db:migrate": "bun x drizzle-kit migrate",
+		"db:studio": "bun x drizzle-kit studio"
 	},
 	"dependencies": {
 		"@cloudflare/vite-plugin": "^1.13.17",
 		"@hugeicons/core-free-icons": "^1.2.1",
 		"@hugeicons/react": "^1.1.1",
+		"@neondatabase/serverless": "^1.0.2",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.1.16",
 		"@tanstack/react-devtools": "^0.7.11",
+		"@tanstack/react-form": "^1.23.8",
 		"@tanstack/react-router": "^1.133.36",
 		"@tanstack/react-router-devtools": "^1.133.36",
 		"@tanstack/react-router-ssr-query": "^1.133.36",
 		"@tanstack/react-start": "^1.134.0",
 		"@tanstack/router-plugin": "^1.133.36",
+		"@tanstack/zod-form-adapter": "^0.42.1",
+		"better-auth": "^1.3.34",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.44.7",
+		"next-themes": "^0.4.6",
+		"postgres": "^3.4.7",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^4.1.16",
-		"vite-tsconfig-paths": "^5.1.4"
+		"vite-tsconfig-paths": "^5.1.4",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
@@ -43,9 +60,11 @@
 		"@types/react": "^19.2.2",
 		"@types/react-dom": "^19.2.2",
 		"@vitejs/plugin-react": "^5.1.0",
+		"drizzle-kit": "^0.31.6",
 		"husky": "^9.1.7",
 		"jsdom": "^27.0.1",
 		"lint-staged": "^16.2.6",
+		"tsx": "^4.20.6",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
 		"ultracite": "6.1.0",
